--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,16 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #spring.main.allow-circular-references=true
+
+#file related configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+
+#project.image=ImagesFolder/
+
+
+#Disable Lazy Loading for Serialization
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+
