--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8081
 #Database Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/AtoZStore
 spring.datasource.username=root
-spring.datasource.password=@grpansare123
+spring.datasource.password=Developer@01
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #hibernate properties
