--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/newatozstore
+spring.datasource.url=jdbc:mysql://localhost:3306/atozstore
 spring.datasource.username=root
-spring.datasource.password=anshul@ak47#
+spring.datasource.password=@grpansare123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #hibernate
 spring.jpa.show-sql=true
