--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,5 @@ spring.servlet.multipart.max-request-size=10MB
 #Disable Lazy Loading for Serialization
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
-
+#success@razorpay
+#failure@razorpay
