--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 #success@razorpay
 #failure@razorpay
+
+#Admin Configuration 
+usernm=admin
+userpsd=@Admin2024
